Release history for Dist-Zilla-App-Command-dumpwith

{{$NEXT}}

0.002011 2015-04-13T02:42:56Z e9deaed
 [Documentation]
 - Redirect URIs to different repo.

 [Packaging]
 - Removed some large unneeded files

0.002010 2015-04-13T01:38:43Z 3258308
 [Dependencies::Stats]
 - Dependencies changed since 0.002003, see misc/*.deps* for details
 - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
 - runtime: +2 (recommends: +1)
 - test: +3 (recommends: ↓1)

 [Internals]
 - Theme loading and construction simplified
 - Theme defaulting uses less useless code.
 - Color themes validated earlier
 - Load Dzil lazier

 [Tests]
 - Added tests covering noop modes, explicit named and prefixed roles, and color theme support and validation.

0.002003 2014-10-31T15:02:11Z 567b541
 [Dependencies::Stats]
 - Dependencies changed since 0.002002, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑2 -1 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -2
 - test: +1 (recommends: ↑2)

 [Internals]
 - remove utf8
 - now supports 5.006
 - remove unneeded autoboxing
 - defer all modules possible

 [Metadata]
 - author = kentnl@cpan.org

0.002002 2014-08-15T21:14:38Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - tests augmented.
 - whitespace adjusted.

 [Dependencies::Stats]
 - Dependencies changed since 0.002001, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)
 - test: -3

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - update Test::ReportPrereqs

0.002001 2014-07-31T10:07:33Z
 [Bugfix]
 - Fix doc link to screenshot

0.002000 2014-07-31T09:56:35Z
 [00 Major]
 - Changes that may affect hand-operated downstream.

 [01 Toolkit]
 - Switched To ExtUtils::MakeMaker
 - Toolkit dependenecies for "latest" only "recommeneded" instead of required.
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - build: -1