@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002012
+ [Changed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 0 → 1.005000
 
 0.002011 2015-04-13T02:42:56Z
 
